# ream

./: README.md  diagnose_kimi_vl.py  diagnose_qwen3_experts.py  pyproject.toml  requirements.txt
examples/: compress_hf_qwen.py  compress_model.py  quickstart.ipynb
ream_moe/: __init__.py  calibration.py  cli.py  merge.py  model_attr_configs.py  model_utils.py  observer.py  observer_configs.py  ream.py
ream_moe/adapters/: __init__.py  base.py  hf_qwen.py
